docs/apache-airflow-providers-standard/0.0.3/_sources/_api/airflow/providers/standard/triggers/file/index.rst.txt
:py:mod:`airflow.providers.standard.triggers.file`
==================================================

.. py:module:: airflow.providers.standard.triggers.file


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.standard.triggers.file.FileTrigger




.. py:class:: FileTrigger(filepath, recursive = False, poke_interval = 5.0, **kwargs)


   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   A trigger that fires exactly once after it finds the requested file or folder.

   :param filepath: File or folder name (relative to the base path set within the connection), can
       be a glob.
   :param recursive: when set to ``True``, enables recursive directory matching behavior of
       ``**`` in glob filepath parameter. Defaults to ``False``.
   :param poke_interval: Time that the job should wait in between each try

   .. py:method:: serialize()

      Serialize FileTrigger arguments and classpath.


   .. py:method:: run()
      :async:

      Loop until the relevant files are found.



